@@ -25,4 +25,6 @@ Version 5.2
 --------------------------------------------
 
 - server-side rendering of vector layers
+- GeoJSON layers
+
 
